--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -29,6 +29,9 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
     "tcp",
 ], optional = true }
 
+# cmp_redis_client
+redis = { version = "0.24.0", features = ["tokio-comp"], optional = true }
+
 # cmp_webstorage
 gloo = { version = "0.11.0", features = [
     "futures",
@@ -41,6 +44,8 @@ gloo = { version = "0.11.0", features = [
 # cmp_websocket_server
 tokio-util = { version = "0.7.10", optional = true }
 tokio-tungstenite = { version = "0.21.0", optional = true }
+
+# cmp_redis_client, cmp_websocket_server
 futures = { version = "0.3.30", optional = true }
 
 document-features = { workspace = true }
@@ -61,7 +66,6 @@ rsiot-leptos = { workspace = true, optional = true }
 rsiot-logging = { workspace = true }
 rsiot-messages-core = { workspace = true, features = ["serde-json"] }
 rsiot-plc = { workspace = true, optional = true }
-rsiot-redis-client = { workspace = true, optional = true }
 rsiot-surrealdb = { workspace = true, optional = true }
 rsiot-websocket-client = { workspace = true, optional = true }
 rsiot-websocket-client-wasm = { workspace = true, optional = true }
@@ -108,7 +112,7 @@ cmp_modbus_client = ["components", "dep:tokio-modbus"]
 plc = ["components", "dep:rsiot-plc"]
 
 ## Компонент клиента Redis
-redis-client = ["components", "dep:rsiot-redis-client"]
+cmp_redis_client = ["components", "dep:futures", "dep:redis"]
 
 ## Компонент доступа к БД SurrealDB
 surrealdb = ["components", "dep:rsiot-surrealdb"]
@@ -143,7 +147,6 @@ single-thread = [
     "rsiot-influxdb?/single-thread",
     "rsiot-leptos?/single-thread",
     "rsiot-plc?/single-thread",
-    "rsiot-redis-client?/single-thread",
     "rsiot-surrealdb?/single-thread",
     "rsiot-timescaledb-storing?/single-thread",
     "rsiot-websocket-client?/single-thread",
