--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -18,21 +18,9 @@ serde = { version = "1.0.197", features = ["derive"] }
 thiserror = { version = "1.0.57" }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
+chrono = { workspace = true }
+url = { workspace = true }
 
-# cmp_auth
-jwt = { version = "0.16.0", optional = true }
-hmac = { version = "0.12.1", optional = true }
-sha2 = { version = "0.10.8", optional = true }
-
-# cmp_modbus_client
-tokio-modbus = { version = "0.11.0", default-features = false, features = [
-    "tcp",
-], optional = true }
-
-# cmp_redis_client
-redis = { version = "0.24.0", features = ["tokio-comp"], optional = true }
-
-# cmp_webstorage
 gloo = { version = "0.11.0", features = [
     "futures",
     "net",
@@ -40,21 +28,28 @@ gloo = { version = "0.11.0", features = [
     "timers",
     "utils",
 ], optional = true }
-
-# cmp_websocket_server
-tokio-util = { version = "0.7.10", optional = true }
-tokio-tungstenite = { version = "0.21.0", optional = true }
-
-# cmp_redis_client, cmp_websocket_server
+jwt = { version = "0.16.0", optional = true }
 futures = { version = "0.3.30", optional = true }
+hmac = { version = "0.12.1", optional = true }
+leptos = { version = "0.6.5", features = ["csr"], optional = true }
+leptos_router = { version = "0.6.5", features = ["csr"], optional = true }
+redis = { version = "0.24.0", features = ["tokio-comp"], optional = true }
+palette = { version = "0.7.4", features = ["named"], optional = true }
+sha2 = { version = "0.10.8", optional = true }
+tokio = { workspace = true, optional = true }
+tokio-modbus = { version = "0.11.0", default-features = false, features = [
+    "tcp",
+], optional = true }
+tokio-tungstenite = { version = "0.21.0", optional = true }
+tokio-util = { version = "0.7.10", optional = true }
+web-sys = { version = "0.3.68", features = [
+    "Location",
+    "Window",
+], optional = true }
 
 document-features = { workspace = true }
 
-tokio = { workspace = true, optional = true }
-chrono = { workspace = true }
-url = { workspace = true }
-
-
+rsiot-macros = { workspace = true }
 rsiot-component-core = { workspace = true, optional = true }
 rsiot-env-vars = { workspace = true, optional = true }
 rsiot-extra-components = { workspace = true, optional = true }
@@ -62,13 +57,10 @@ rsiot-http-client = { workspace = true, optional = true }
 rsiot-http-client-wasm = { workspace = true, optional = true }
 rsiot-http-server = { workspace = true, optional = true }
 rsiot-influxdb = { workspace = true, optional = true }
-rsiot-leptos = { workspace = true, optional = true }
 rsiot-logging = { workspace = true }
 rsiot-messages-core = { workspace = true, features = ["serde-json"] }
 rsiot-plc = { workspace = true, optional = true }
 rsiot-surrealdb = { workspace = true, optional = true }
-rsiot-websocket-client = { workspace = true, optional = true }
-rsiot-websocket-client-wasm = { workspace = true, optional = true }
 rsiot-timescaledb-storing = { workspace = true, optional = true }
 
 
@@ -103,7 +95,14 @@ http-server = ["components", "dep:rsiot-http-server"]
 influxdb = ["components", "dep:rsiot-influxdb"]
 
 ## Компонент для создания интерфейсов на базе Leptos
-leptos = ["components", "dep:rsiot-leptos"]
+cmp_leptos = [
+    "components",
+    "dep:gloo",
+    "dep:leptos",
+    "dep:leptos_router",
+    "dep:palette",
+    "dep:web-sys",
+]
 
 ## Компонент Modbus клиент
 cmp_modbus_client = ["components", "dep:tokio-modbus"]
@@ -121,10 +120,10 @@ surrealdb = ["components", "dep:rsiot-surrealdb"]
 timescaledb-storing = ["components", "dep:rsiot-timescaledb-storing"]
 
 ## Компонент websocket клиента
-websocket-client = ["components", "dep:rsiot-websocket-client"]
+cmp_websocket_client = ["components", "dep:futures", "dep:tokio-tungstenite"]
 
 ## Компонент websocket клиента
-websocket-client-wasm = ["components", "dep:rsiot-websocket-client-wasm"]
+cmp_websocket_client_wasm = ["components", "dep:futures", "dep:gloo"]
 
 ## Компонент websocket сервера
 cmp_websocket_server = [
@@ -145,15 +144,17 @@ single-thread = [
     "rsiot-http-client-wasm?/single-thread",
     "rsiot-http-server?/single-thread",
     "rsiot-influxdb?/single-thread",
-    "rsiot-leptos?/single-thread",
     "rsiot-plc?/single-thread",
     "rsiot-surrealdb?/single-thread",
     "rsiot-timescaledb-storing?/single-thread",
-    "rsiot-websocket-client?/single-thread",
-    "rsiot-websocket-client-wasm?/single-thread",
 ]
 
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+
+[[example]]
+name = "create_signal_from_msg"
+path = "examples/cmp_leptos/create_signal_from_msg.rs"
