--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,10 @@
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
   // "rust-analyzer.cargo.features": [
   //   "serde-json",
-  //   "cmp_auth",
-  //   "cmp_modbus_client",
+
+  //   "cmp_auth"
+  //   "cmp_http_client"
+  //   "cmp_modbus_client"
   //   "cmp_redis_client",
   //   "cmp_websocket_client",
   //   "cmp_websocket_server"
@@ -13,11 +15,13 @@
   // -- wasm32
   "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   "rust-analyzer.cargo.features": [
-    "cmp_leptos",
-    "cmp_websocket_client_wasm",
-    "cmp_webstorage",
     "single-thread",
-    "serde-json"
+    "serde-json",
+
+    "cmp_http_client_wasm"
+    // "cmp_leptos",
+    // "cmp_websocket_client_wasm",
+    // "cmp_webstorage"
   ],
 
   // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
