--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,29 @@
 {
   // -- x86_64, multi-thread
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.features": [
-  //   "serde-json",
-
-  //   "cmp_auth"
-  //   "cmp_http_client"
-  //   "cmp_modbus_client"
-  //   "cmp_redis_client",
-  //   "cmp_websocket_client",
-  //   "cmp_websocket_server"
-  // ],
-
-  // -- wasm32
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
   "rust-analyzer.cargo.features": [
-    "single-thread",
     "serde-json",
 
-    "cmp_http_client_wasm"
-    // "cmp_leptos",
-    // "cmp_websocket_client_wasm",
-    // "cmp_webstorage"
+    // "cmp_auth",
+    // "cmp_http_client",
+    "cmp_http_server"
+    // "cmp_modbus_client",
+    // "cmp_redis_client",
+    // "cmp_websocket_client",
+    // "cmp_websocket_server"
   ],
+
+  // -- wasm32
+  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  // "rust-analyzer.cargo.features": [
+  //   "single-thread",
+  //   "serde-json",
+
+  //   "cmp_http_client_wasm",
+  //   "cmp_leptos",
+  //   "cmp_websocket_client_wasm",
+  //   "cmp_webstorage"
+  // ],
 
   // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
