--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
 
     // "cmp_auth",
     // "cmp_http_client",
-    "cmp_http_server"
+    // "cmp_http_server"
+    "cmp_influxdb"
     // "cmp_modbus_client",
     // "cmp_redis_client",
     // "cmp_websocket_client",
