--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,11 @@
     // "cmp_auth",
     // "cmp_http_client",
     // "cmp_http_server"
-    "cmp_influxdb"
+    // "cmp_influxdb"
     // "cmp_modbus_client",
+    // "cmp_plc"
     // "cmp_redis_client",
+    "cmp_timescaledb"
     // "cmp_websocket_client",
     // "cmp_websocket_server"
   ],
