--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -39,6 +39,7 @@ sqlx = { version = "0.7.3", features = [
     "postgres",
     "runtime-tokio",
 ], optional = true }
+surrealdb = { version = "1.2.0", optional = true }
 tokio = { workspace = true, optional = true }
 tokio-modbus = { version = "0.11.0", default-features = false, features = [
     "tcp",
@@ -62,7 +63,6 @@ rsiot-env-vars = { workspace = true, optional = true }
 rsiot-extra-components = { workspace = true, optional = true }
 rsiot-logging = { workspace = true }
 rsiot-messages-core = { workspace = true, features = ["serde-json"] }
-rsiot-surrealdb = { workspace = true, optional = true }
 
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -133,7 +133,7 @@ cmp_plc = ["components", "dep:instant", "dep:gloo"]
 cmp_redis_client = ["components", "dep:futures", "dep:redis"]
 
 ## Компонент доступа к БД SurrealDB
-surrealdb = ["components", "dep:rsiot-surrealdb"]
+cmp_surrealdb = ["components", "dep:surrealdb"]
 
 ## Компонент сохранения в БД TimescaleDB
 cmp_timescaledb = ["components", "dep:sqlx"]
@@ -159,7 +159,6 @@ cmp_webstorage = ["components", "dep:gloo"]
 single-thread = [
     "rsiot-component-core?/single-thread",
     "rsiot-extra-components?/single-thread",
-    "rsiot-surrealdb?/single-thread",
 ]
 
 
@@ -187,6 +186,10 @@ path = "examples/cmp_leptos/create_signal_from_msg.rs"
 [[example]]
 name = "cmp_plc"
 path = "examples/cmp_plc/cmp_plc/main.rs"
+
+[[example]]
+name = "cmp_surrealdb"
+path = "examples/cmp_surrealdb/cmp_surrealdb.rs"
 
 [[example]]
 name = "cmp_timescaledb"
