--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,37 @@
 {
   // -- x86_64, multi-thread
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.features": [
-  //   "serde-json",
-  //   "executor",
-  //   "single-thread",
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  "rust-analyzer.cargo.features": [
+    "serde-json",
+    // "executor",
+    "single-thread",
+    "env_vars"
 
-  //   "cmp_auth",
-  //   "cmp_http_client",
-  //   "cmp_http_server",
-  //   "cmp_influxdb",
-  //   "cmp_modbus_client",
-  //   "cmp_plc",
-  //   "cmp_redis_client",
-  //   "cmp_surrealdb",
-  //   "cmp_timescaledb",
-  //   "cmp_websocket_client",
-  //   "cmp_websocket_server"
-  // ],
+    //   "cmp_auth",
+    //   "cmp_http_client",
+    //   "cmp_http_server",
+    //   "cmp_influxdb",
+    //   "cmp_modbus_client",
+    //   "cmp_plc",
+    //   "cmp_redis_client",
+    //   "cmp_surrealdb",
+    //   "cmp_timescaledb",
+    //   "cmp_websocket_client",
+    //   "cmp_websocket_server"
+  ],
 
   // -- wasm32
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
-  "rust-analyzer.cargo.features": [
-    "single-thread",
-    "serde-json",
-    "executor",
+  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  // "rust-analyzer.cargo.features": [
+  //   "single-thread",
+  //   "serde-json",
+  //   "executor",
 
-    "cmp_http_client_wasm",
-    "cmp_leptos",
-    "cmp_websocket_client_wasm",
-    "cmp_webstorage"
-  ],
+  //   "cmp_http_client_wasm",
+  //   "cmp_leptos",
+  //   "cmp_websocket_client_wasm",
+  //   "cmp_webstorage"
+  // ],
 
   // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
