--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -22,6 +22,9 @@ url = { workspace = true }
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
 axum = { version = "0.7.4", optional = true }
+clap = { version = "^4.4.18", features = ["derive"], optional = true }
+dotenvy = { version = "0.15.7", optional = true }
+envy = { version = "0.4.2", optional = true }
 http = { version = "1.0.0", optional = true }
 instant = { version = "0.1.12", features = ["wasm-bindgen"], optional = true }
 jwt = { version = "0.16.0", optional = true }
@@ -47,6 +50,7 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
 ], optional = true }
 tokio-tungstenite = { version = "0.21.0", optional = true }
 tokio-util = { version = "0.7.10", optional = true }
+toml = { version = "0.8.9", optional = true }
 tower-http = { version = "0.5.1", features = [
     "cors",
     "trace",
@@ -59,7 +63,6 @@ web-sys = { version = "0.3.68", features = [
 document-features = { workspace = true }
 
 rsiot-macros = { workspace = true }
-rsiot-env-vars = { workspace = true, optional = true }
 rsiot-logging = { workspace = true }
 
 
@@ -90,6 +93,9 @@ tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 default = ["serde-json"]
 
+## Конфигурирование через переменные
+env_vars = ["dep:clap", "dep:dotenvy", "dep:envy", "dep:toml"]
+
 ## Базовые компоненты
 executor = ["dep:futures", "dep:tokio"]
 
@@ -99,9 +105,6 @@ serde-json = ["dep:serde_json"]
 
 ## Компонент аутентификации
 cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
-
-## Конфигурирование через переменные
-env-vars = ["dep:rsiot-env-vars"]
 
 ## Компонент http-клиент
 cmp_http_client = ["executor", "dep:http", "dep:reqwest"]
@@ -209,6 +212,10 @@ path = "examples/executor/executor-multi-thread/main.rs"
 [[example]]
 name = "executor_single_thread"
 path = "examples/executor/executor-single-thread/main.rs"
+
+[[example]]
+name = "env_vars"
+path = "examples/env_vars/env_vars.rs"
 
 [[example]]
 name = "message_new_macro"
