--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["./rsiot", "./rsiot-logging", "./rsiot-macros"]
+members = ["./rsiot", "./rsiot-macros"]
 exclude = ["./rsiot-esp"]
 resolver = "2"
 
@@ -21,13 +21,9 @@ futures = { version = "0.3.30" }
 tokio = { version = "^1.36.0", features = ["macros", "sync", "rt", "time"] }
 tokio-util = { version = "0.7.10" }
 
-# CLI
-clap = { version = "^4.4.18", features = ["derive"] }
-
 # datatypes
 chrono = { version = "0.4.33", features = ["serde"] }
 http = { version = "1.0.0" }
-# TODO - заменить на palette?
 rgb = { version = "0.8.37", features = ["serde"] }
 palette = { version = "0.7.4", features = ["named"] }
 url = { version = "2.5.0" }
@@ -35,11 +31,6 @@ uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
 # documentation
 document-features = { version = "0.2.8" }
-
-
-# env vars
-dotenvy = { version = "0.15.7" }
-envy = { version = "0.4.2" }
 
 # errors
 anyhow = { version = "1.0.79" }
@@ -60,9 +51,7 @@ syn = { version = "2.0.48" }
 # serialization / deserialization
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
-toml = { version = "0.8.9" }
 
 
 # workspace packages
-rsiot-logging = { version = "0.0.62", path = "./rsiot-logging" }
 rsiot-macros = { version = "0.0.64", path = "./rsiot-macros" }
