--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,20 +21,20 @@
   // ],
 
   // -- wasm32
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
-  "rust-analyzer.cargo.features": [
-    "single-thread",
-    "executor",
-    "logging"
+  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  // "rust-analyzer.cargo.features": [
+  //   "single-thread",
+  //   "executor",
+  //   "logging"
 
-    // "cmp_http_client_wasm",
-    // "cmp_leptos",
-    // "cmp_websocket_client_wasm",
-    // "cmp_webstorage"
-  ],
+  // "cmp_http_client_wasm",
+  // "cmp_leptos",
+  // "cmp_websocket_client_wasm",
+  // "cmp_webstorage"
+  // ],
 
-  // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
-  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+  // -- esp32
+  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+
   "rust-analyzer.showUnlinkedFileNotification": false
 }
