--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,6 +3,9 @@ linker = "ldproxy"
 runner = "espflash flash --monitor"
 rustflags = ["--cfg", "espidf_time64"]
 
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
+
 [unstable]
 build-std = ["std", "panic_abort"]
 
