--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -1,28 +1,27 @@
 [package]
-categories.workspace = true
+categories = ["api-bindings", "gui", "network-programming"]
 description = "Метакрейт, импортирующий все другие крейты через флаги feature"
-edition.workspace = true
-keywords.workspace = true
-license.workspace = true
+edition = "2021"
+keywords = ["iot", "scada"]
+license = "MIT OR Apache-2.0"
 name = "rsiot"
 readme = "README.md"
-repository.workspace = true
-rust-version.workspace = true
+repository = "https://github.com/Konstantin-Dudersky/rsiot"
+rust-version = "1.75.0"
 version = "0.0.72"
 
 
 [dependencies]
 anyhow = { version = "1.0.80" }
-async-trait = { version = "0.1.77" }
-chrono = { workspace = true }
+chrono = { version = "0.4.33", features = ["serde"] }
+document-features = { version = "0.2.8" }
 getrandom = { version = "0.2", features = ["js"] }
 serde = { version = "1.0.197", features = ["derive"] }
 thiserror = { version = "1.0.57" }
-tokio = { version = "^1.36.0", features = ["macros", "sync", "rt", "time"] }
 tracing = { version = "0.1.40", features = ["log"] }
-url = { workspace = true }
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
+async-trait = { version = "0.1.77", optional = true }
 axum = { version = "0.7.4", optional = true }
 clap = { version = "^4.4.18", features = ["derive"], optional = true }
 dotenvy = { version = "0.15.7", optional = true }
@@ -47,6 +46,12 @@ sqlx = { version = "0.7.3", features = [
     "runtime-tokio",
 ], optional = true }
 surrealdb = { version = "1.2.0", optional = true }
+tokio = { version = "^1.36.0", features = [
+    "macros",
+    "sync",
+    "rt",
+    "time",
+], optional = true }
 tokio-modbus = { version = "0.11.0", default-features = false, features = [
     "tcp",
 ], optional = true }
@@ -61,14 +66,13 @@ tower-http = { version = "0.5.1", features = [
     "cors",
     "trace",
 ], optional = true }
+url = { version = "2.5.0", optional = true }
 web-sys = { version = "0.3.68", features = [
     "Location",
     "Window",
 ], optional = true }
 
-document-features = { workspace = true }
-
-rsiot-macros = { workspace = true }
+rsiot-macros = { version = "0.0.72" }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
@@ -92,7 +96,7 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
 
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
-openssl = { version = "0.10", features = ["vendored"] }
+openssl = { version = "0.10", features = ["vendored"], optional = true }
 
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
@@ -101,25 +105,37 @@ embedded-svc = { version = "0.27.1", optional = true }
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
-tokio = { workspace = true, features = ["rt-multi-thread"] }
+tokio = { version = "^1.36.0", features = [
+    "macros",
+    "sync",
+    "rt",
+    "time",
+    "rt-multi-thread",
+] }
 
 
-[target.'cfg(target_arch = "riscv32")'.build-dependencies]
-embuild = "0.31.3"
-
+[build-dependencies]
+embuild = { version = "0.31.3" }
 
 [features]
 
 default = ["serde-json"]
 
 ## Конфигурирование через переменные
-env_vars = ["dep:clap", "dep:dotenvy", "dep:envy", "dep:toml"]
+env_vars = ["dep:clap", "dep:dotenvy", "dep:envy", "dep:toml", "dep:url"]
 
 ## Базовые компоненты
-executor = ["dep:futures"]
+executor = ["dep:async-trait", "dep:futures", "dep:tokio"]
 
 ## Настройка логгироания сообщений
-logging = ["dep:tracing-loki", "dep:tracing-subscriber", "dep:tracing-web"]
+logging = [
+    "dep:openssl",
+    "dep:tokio",
+    "dep:tracing-loki",
+    "dep:tracing-subscriber",
+    "dep:tracing-web",
+    "dep:url",
+]
 
 ## Работа в однопоточном режиме
 single-thread = []
@@ -130,16 +146,22 @@ serde-json = ["dep:serde_json"]
 cmp_auth = ["executor", "dep:jwt", "dep:hmac", "dep:sha2"]
 
 ## Компонент http-клиент
-cmp_http_client = ["executor", "dep:http", "dep:reqwest"]
+cmp_http_client = [
+    "executor",
+    "dep:http",
+    "dep:openssl",
+    "dep:reqwest",
+    "dep:url",
+]
 
 ## Компонент http-клиент для платформы WASM
-cmp_http_client_wasm = ["executor", "dep:http", "dep:gloo"]
+cmp_http_client_wasm = ["executor", "dep:http", "dep:gloo", "dep:url"]
 
 ## Компонент http-сервер
 cmp_http_server = ["executor", "dep:axum", "dep:tower-http"]
 
 ## Компонент сохранения в БД InfluxDB
-cmp_influxdb = ["executor", "dep:reqwest"]
+cmp_influxdb = ["executor", "dep:openssl", "dep:reqwest"]
 
 ## Компонент для создания интерфейсов на базе Leptos
 cmp_leptos = [
@@ -147,6 +169,7 @@ cmp_leptos = [
     "dep:gloo",
     "dep:leptos",
     "dep:palette",
+    "dep:url",
     "dep:web-sys",
 ]
 
@@ -157,7 +180,7 @@ cmp_modbus_client = ["executor", "dep:tokio-modbus"]
 cmp_plc = ["executor", "dep:instant", "dep:gloo"]
 
 ## Компонент клиента Redis
-cmp_redis_client = ["executor", "dep:futures", "dep:redis"]
+cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
 
 ## Сохранение данных в хранилище ESP32
 cmp_storage_esp = ["executor", "dep:esp-idf-svc", "dep:postcard"]
@@ -166,13 +189,18 @@ cmp_storage_esp = ["executor", "dep:esp-idf-svc", "dep:postcard"]
 cmp_surrealdb = ["executor", "dep:surrealdb"]
 
 ## Компонент сохранения в БД TimescaleDB
-cmp_timescaledb = ["executor", "dep:sqlx"]
+cmp_timescaledb = ["executor", "dep:sqlx", "dep:url"]
 
 ## Компонент websocket клиента
-cmp_websocket_client = ["executor", "dep:futures", "dep:tokio-tungstenite"]
+cmp_websocket_client = [
+    "executor",
+    "dep:futures",
+    "dep:tokio-tungstenite",
+    "dep:url",
+]
 
 ## Компонент websocket клиента
-cmp_websocket_client_wasm = ["executor", "dep:futures", "dep:gloo"]
+cmp_websocket_client_wasm = ["executor", "dep:futures", "dep:gloo", "dep:url"]
 
 ## Компонент websocket сервера
 cmp_websocket_server = [
@@ -224,6 +252,10 @@ name = "cmp_plc"
 path = "examples/cmp_plc/cmp_plc/main.rs"
 
 [[example]]
+name = "cmp_storage_esp"
+path = "examples/cmp_storage_esp/cmp_storage_esp.rs"
+
+[[example]]
 name = "cmp_surrealdb"
 path = "examples/cmp_surrealdb/cmp_surrealdb.rs"
 
@@ -246,3 +278,12 @@ path = "examples/env_vars/env_vars.rs"
 [[example]]
 name = "message_new_macro"
 path = "examples/message/message_new_macro.rs"
+
+
+[profile.release]
+opt-level = "s"
+
+
+[profile.dev]
+debug = true
+opt-level = "z"
