--- a/rsiot/.cargo/config.toml
+++ b/rsiot/.cargo/config.toml
@@ -7,11 +7,16 @@ linker = "aarch64-linux-gnu-gcc"
 [target.riscv32imc-esp-espidf]
 linker = "ldproxy"
 runner = "espflash flash --monitor"
-rustflags = ["--cfg", "espidf_time64"]
+rustflags = [
+    "--cfg",
+    "espidf_time64",
+    "--cfg",
+    "mio_unsupported_force_poll_poll", # https://github.com/tokio-rs/tokio/issues/5866
+]
 
 [unstable]
 build-std = ["std", "panic_abort"]
 
 [env]
 MCU = "esp32c3"
-ESP_IDF_VERSION = "v5.1.2"
+ESP_IDF_VERSION = "v5.2.1"
