--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -8,7 +8,7 @@ name = "rsiot"
 readme = "README.md"
 repository = "https://github.com/Konstantin-Dudersky/rsiot"
 rust-version = "1.75.0"
-version = "0.0.73"
+version = "0.0.77"
 
 
 [dependencies]
@@ -218,10 +218,10 @@ cmp_webstorage = ["executor", "dep:gloo"]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 targets = [
-    "aarch64-unknown-linux-gnu",
-    "riscv32imc-esp-espidf",
-    "wasm32-unknown-unknown",
     "x86_64-unknown-linux-gnu",
+    # "aarch64-unknown-linux-gnu",
+    # "riscv32imc-esp-espidf",
+    "wasm32-unknown-unknown",
 ]
 
 
