--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -14,8 +14,9 @@
     //   "cmp_modbus_client",
     //   "cmp_plc",
     // "cmp_redis_client"
-    "cmp_slint"
+    // "cmp_slint"
     //   "cmp_surrealdb",
+    "cmp_system_info"
     //   "cmp_timescaledb",
     // "cmp_websocket_client"
     // "cmp_websocket_server"
