--- a/rsiot-esp/.vscode/settings.json
+++ b/rsiot-esp/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "rust-analyzer.cargo.features": ["single-thread"],
-  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf"
+  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+  "rust-analyzer.showUnlinkedFileNotification": false
   // "rust-analyzer.cargo.features": [],
 }
