--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -1,26 +1,26 @@
 {
   // ---- x86_64 -----------------------------------------------------------------------------------
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
-  // "rust-analyzer.cargo.features": [
-  //   "executor",
-  // "single-thread",
-  // "env_vars",
-  // "logging",
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  "rust-analyzer.cargo.features": [
+    //   "executor",
+    // "single-thread",
+    // "env_vars",
+    // "logging",
 
-  //   "cmp_auth",
-  //   "cmp_http_client",
-  //   "cmp_http_server",
-  //   "cmp_influxdb",
-  //   "cmp_modbus_client",
-  //   "cmp_plc",
-  // "cmp_redis_client"
-  // "cmp_slint"
-  //   "cmp_surrealdb",
-  // "cmp_system_info"
-  //   "cmp_timescaledb",
-  // "cmp_websocket_client"
-  // "cmp_websocket_server"
-  // ],
+    //   "cmp_auth",
+    //   "cmp_http_client",
+    //   "cmp_http_server",
+    "cmp_influxdb"
+    //   "cmp_modbus_client",
+    //   "cmp_plc",
+    // "cmp_redis_client"
+    // "cmp_slint"
+    //   "cmp_surrealdb",
+    // "cmp_system_info"
+    //   "cmp_timescaledb",
+    // "cmp_websocket_client"
+    // "cmp_websocket_server"
+  ],
 
   // ---- wasm32 -----------------------------------------------------------------------------------
   // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
@@ -36,13 +36,8 @@
   // ],
 
   // ---- esp32 ------------------------------------------------------------------------------------
-  "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
-  "rust-analyzer.cargo.features": [
-    // "single-thread",
-    "executor",
-
-    "cmp_esp"
-  ],
+  // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
+  // "rust-analyzer.cargo.features": ["executor", "cmp_esp"],
 
   "rust-analyzer.showUnlinkedFileNotification": false
 }
