--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -57,7 +57,7 @@ tokio = { version = "^1.36.0", features = [
     "macros",
     "sync",
     "rt",
-    # "time",
+    "time",
 ], optional = true }
 tokio-modbus = { version = "0.11.0", default-features = false, features = [
     "tcp",
