--- a/test_slint/Cargo.toml
+++ b/test_slint/Cargo.toml
@@ -2,6 +2,7 @@
 name = "test_slint"
 version = "0.1.0"
 edition = "2021"
+build = "build.rs"
 
 
 [dependencies]
@@ -15,5 +16,12 @@ tokio = { version = "*", features = ["rt-multi-thread", "macros", "time"] }
 tracing = "*"
 tracing-subscriber = "*"
 
-slint = { version = "*" }
+slint = { version = "*", features = [
+    "backend-linuxkms-noseat",
+    "renderer-skia",
+] }
 slint-interpreter = { version = "1.4.1", features = ["display-diagnostics"] }
+
+
+[build-dependencies]
+slint-build = "1.5.0"
