--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -42,9 +42,6 @@ palette = { version = "0.7.4", features = ["named"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
 sha2 = { version = "0.10.8", optional = true }
 slint = { version = "1.4.1", optional = true }
-slint-interpreter = { version = "1.4.1", features = [
-    "display-diagnostics",
-], optional = true }
 sqlx = { version = "0.7.3", features = [
     "chrono",
     "macros",
@@ -209,7 +206,7 @@ cmp_plc = ["executor", "dep:instant", "dep:gloo"]
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
 
 ## Компонент пользовательского интерфейса, реализованного с помощью библиотеки Slint
-cmp_slint = ["executor", "dep:slint", "dep:slint-interpreter"]
+cmp_slint = ["executor", "dep:slint"]
 
 ## Компонент доступа к БД SurrealDB
 cmp_surrealdb = ["executor", "dep:surrealdb"]
