--- a/test_slint/Cargo.toml
+++ b/test_slint/Cargo.toml
@@ -7,7 +7,8 @@ build = "build.rs"
 
 [dependencies]
 futures = "*"
-rsiot = { path = "../rsiot", features = ["executor", "cmp_slint"] }
+rsiot = { path = "../rsiot", features = ["cmp_slint", "cmp_system_info"] }
+serde = { version = "*", features = ["derive"] }
 tokio = { version = "*", features = ["rt-multi-thread", "macros", "time"] }
 tracing = "*"
 tracing-subscriber = "*"
