--- a/rsiot/.vscode/settings.json
+++ b/rsiot/.vscode/settings.json
@@ -8,15 +8,15 @@
     // "logging"
 
     //   "cmp_auth",
-    //   "cmp_http_client",
+    // "cmp_http_client"
     //   "cmp_http_server",
     // "cmp_influxdb"
     //   "cmp_modbus_client",
     //   "cmp_plc",
     // "cmp_redis_client"
-    "cmp_slint"
+    // "cmp_slint"
     //   "cmp_surrealdb",
-    // "cmp_system_info"
+    "cmp_system_info"
     //   "cmp_timescaledb",
     // "cmp_websocket_client"
     // "cmp_websocket_server"
