--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -37,7 +37,8 @@ leptos = { version = "0.6.5", features = ["csr"], optional = true }
 leptos_router = { version = "0.6.5", features = ["csr"], optional = true }
 postcard = { version = "1.0.8", features = ["use-std"], optional = true }
 redis = { version = "0.25.0", features = ["tokio-comp"], optional = true }
-reqwest = { version = "0.11.23", features = ["json"], optional = true }
+reqwest = { version = "0.12.0", features = ["json"], optional = true }
+rppal = { version = "0.17.1", optional = true }
 palette = { version = "0.7.4", features = ["named"], optional = true }
 serde_json = { version = "1.0.113", optional = true }
 sha2 = { version = "0.10.8", optional = true }
@@ -199,8 +200,11 @@ cmp_leptos = [
 ## Компонент Modbus клиент
 cmp_modbus_client = ["executor", "dep:tokio-modbus"]
 
-# Компонент ПЛК
+## Компонент ПЛК
 cmp_plc = ["executor", "dep:instant", "dep:gloo"]
+
+## Работа с периферией Raspberry Pi
+cmp_raspberrypi = ["executor", "dep:rppal"]
 
 ## Компонент клиента Redis
 cmp_redis_client = ["executor", "dep:futures", "dep:redis", "dep:url"]
